# lgtv-exporter

./: Dockerfile  README.md  lgtv_exporter.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
.github/workflows/deepseek/: prompt.md
